Lowered max-width for note header usernames to 100px to avoid overflow

--- a/src/components/Note/NoteHeader/NoteHeader.module.scss
+++ b/src/components/Note/NoteHeader/NoteHeader.module.scss
@@ -53,7 +53,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        max-width: 360px;
+        max-width: 100px;
         color: var(--text-primary);
         margin-right: 2px;
       }
